k3s/ia-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ia-consumer
  namespace: ot-namespace
  labels:
    app: ia-consumer
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: ia-consumer
  template:
    metadata:
      labels:
        app: ia-consumer
    spec:
      containers:
        - name: ia-consumer
          image: ghcr.io/davidevaloroso-sys/ot-security:ia-consumer-latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
